--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>ToDo</title>
+    <meta charset="UTF-8" />
+  </head>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
-
-<body>
-	<div id="app"></div>
-
-	<script src="src/index.js">
-	</script>
-</body>
-
+  <body>
+    <div class="input-area">
+      <input id ="add-text" "placeholder="todo input" />
+      <button id="add-button">add</button>
+    </div>
+    <div class="incomplete-area">
+      <p class="title">not done</p>
+      <ul id="incomplete-list">
+        <div class="list-row"></div>
+      </ul>
+    </div>
+    <div class="complete-area">
+      <p class="title">complete todo</p>
+      <ul id="complete-list">
+        <div class="list-row"></div>
+      </ul>
+    </div>
+    <div></div>
+    <script src="src/index.js"></script>
+  </body>
 </html>
